@@ -1,7 +1,6 @@
 BIC                     Bayesian Information Criterion
 GLMM                    Fit Generalized Linear Mixed Models via PQL
 GLMM-class              Class "GLMM"
-Names                   Extract or assign Names
 VarCorr                 Extract variance and correlation components
 VarCorr-class           Class "VarCorr"
 contr.SAS               Contrast Matrices for SAS-like Results
@@ -9,7 +8,6 @@ fixed.effects           Extract Fixed Effects
 getCovariate            Utilities for formulas
 groupedData             Creation of groupedData objects
 gsummary                Summarize a data frame by group
-intervals               Confidence Intervals on Coefficients
 lmList                  List of lm Objects with a Common Model
 lmList-class            Class "lmList"
 lme                     Fit linear mixed-effects models
