@@ -32,8 +32,8 @@ importMethodsFrom("Matrix",
 export(
        "BIC",
        "GLMM",
-       "Names",
-       "Names<-",
+#       "Names",
+#       "Names<-",
        "VarCorr",
        "contr.SAS",
        "fixef",
