@@ -2,11 +2,16 @@
 \docType{genericFunction}
 \alias{VarCorr}
 \title{Extract variance and correlation components}
-% \arguments{
-%  \item{x}{a fitted model object, usually an object inheriting from
-%      class \code{lme}. 
-%  }
-% }
+\usage{
+VarCorr(x, \dots)
+}
+\arguments{
+  \item{x}{a fitted model object, usually an object inheriting from
+    class \code{lmer}.
+  }
+  \item{\dots}{Additional, optional arguments for some methods.  At
+    present none are used.}
+}
 \description{
   Extract the estimated variances, standard
   deviations, and correlations of the random-effects terms in a
@@ -18,12 +23,10 @@
 \value{
   an object of class \code{VarCorr}.
 }
-%\author{Saikat DebRoy \email{saikat@stat.wisc.edu} and Douglas Bates \email{bates@stat.wisc.edu}}
-\seealso{\code{\link{lme}}, \code{\link{GLMM}}, \code{\link{VarCorr-class}}}
+\seealso{\code{\link{lmer}}, \code{\link{GLMM}}, \code{\link{VarCorr-class}}}
 \examples{
-data(bdf, package = 'mlmRev')
-fm <- lme(langPOST ~ IQ.ver.cen + avg.IQ.ver.cen, data = bdf,
-          random = ~ IQ.ver.cen | schoolNR)
-VarCorr(fm)
+(fm1 <- lmer(decrease ~ treatment + (1|rowpos) + (1|colpos),
+             OrchardSprays))
+VarCorr(fm1)
 }
 \keyword{models}
